# remwaste-accent-classifier

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  huggingface.yaml  package-lock.json  pyproject.toml  requirements.txt
app/: __init__.py  dependencies.py  main.py
app/models/: inference.py
app/monitoring/: prometheus.py
app/routes/: accent.py
app/utils/: audio.py
grafana/provisioning/dashboards/: accent-dashboard.json
tests/: test_accent_analysis.py
tests/integration/: test_pipeline.py
